<resources>
    <string name="app_name">佳华仪表速查</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">信息自动化部</string>
    <string name="nav_header_subtitle">佳华维检站仪表速查</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">仪表查询</string>
    <string name="menu_gallery">监控画面</string>
    <string name="menu_setup">设置</string>

    <string name="str_tv_header_tag">工位号</string>
    <string name="str_tv_header_standard">规格</string>
    <string name="str_tv_header_range">测量范围</string>
    <string name="str_menu_search">搜索栏</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="str_tv_header_domain">区域</string>
    <string name="str_splash">设备表查询</string>
    <string name="str_btn_splash_enter">进入</string>
    <string name="str_tv_header_serial">序号</string>
    <string name="menu_detail">详情</string>
    <string name="str_menu_tab_monitor">化产主体</string>
    <string name="str_menu_tab_interlock">联锁</string>
    <string name="menu_special">特殊仪表</string>
    <string name="str_menu_tab_monitor_huachan_zhisuan">制酸</string>
    <string name="str_menu_tab_monitor_huachan_gongfu">公辅</string>
    <string name="menu_database">数据库</string>
    <string name="str_tv_result_tag">搜索结果:</string>
    <string name="str_tv_result_display">空</string>
    <string name="str_menu_tab_special_huachan">化产区域</string>
    <string name="str_menu_tab_special_ganxijiao">干熄焦</string>
    <string name="str_menu_tab_special_jiaolu">焦炉</string>
    <string name="str_menu_tab_special_beimei">备煤</string>
    <string name="str_dialog_title_database_password">请输入数据库进入口令</string>
    <string name="str_dialog_btn_database_enter">确认口令</string>
    <string name="str_menu_detail_simple">简/全</string>
    <string name="menu_interlock">联锁查询</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_interlock_detail">联锁详情</string>
    <string name="label_activity_splash">引导页</string>
    <string name="label_activity_activity">主页面</string>
    <string name="str_menu_tab_jiaolu">焦炉</string>
    <string name="str_menu_tab_monitor_ganxijiao">干熄焦</string>
    <string name="menu_phone">联系电话</string>
    <string name="label_phone">联系电话</string>
</resources>