<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_special"
            android:icon="@drawable/ic_baseline_developer_board_24"
            android:title="@string/menu_special" />
        <item
            android:id="@+id/nav_monitor"
            android:icon="@drawable/ic_workbench"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_interlock"
            android:icon="@drawable/ic_baseline_lock_24"
            android:title="@string/menu_interlock" />
        <item
            android:id="@+id/nav_database"
            android:icon="@drawable/ic_baseline_data_usage_24"
            android:title="@string/menu_database" />
    </group>
</menu>