<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bluesky.automationjiahua.ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:orientation="horizontal">
        <!--TODO 这里要加大两个Spinner的占比-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="区域:"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner_query_domain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/spinner_query_domain"
            android:labelFor="@id/spinner_query_domain"
            android:theme="@style/Theme.SpinnerCustom"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="搜索:"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner_query_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/Theme.SpinnerCustom"

            android:entries="@array/spinner_query_column" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:divider="@drawable/line"
            android:orientation="horizontal"
            android:showDividers="middle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/str_tv_header_serial"
                android:textSize="20sp"
                tools:text="序号" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/str_tv_header_tag"
                android:textSize="20sp"
                tools:text="工位号" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="center"
                android:text="@string/str_tv_header_standard"
                android:textSize="20sp"
                tools:text="规格" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/str_tv_header_range"
                android:textSize="20sp"
                tools:text="测量范围" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />
    </LinearLayout>

</LinearLayout>